src/objects/MICO_Risks_Issues__c.object
<CustomObject>
    <description>Business Description: This object is used as a Risks and Issues register to capture and escalate risks and issues, and track their resolution.

Used In: Mission Control App</description>
    <fields>
        <fullName>App__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The app this risk / issue is related to</description>
        <inlineHelpText>The app this risk / issue is related to</inlineHelpText>
        <label>App</label>
        <referenceTo>MICO_App__c</referenceTo>
        <relationshipName>Risks_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Organisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Methodology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Raised__c</fullName>
        <defaultValue>Today()</defaultValue>
        <inlineHelpText>Record the date the issue was raised. This may be different to the day it was logged in Tracker</inlineHelpText>
        <label>Date Raised</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Identified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The originator of the risk or issue</description>
        <label>Identified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Risks_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Impact_CC__c</fullName>
        <inlineHelpText>What is the impact (or severity) of this item occurring?</inlineHelpText>
        <label>Impact</label>
        <picklist>
            <picklistValues>
                <fullName>Low Impact</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>High Impact</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
                <color>#A53711</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting</label>
        <referenceTo>MICO_Meeting__c</referenceTo>
        <relationshipName>Risks_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mitigating_Actions__c</fullName>
        <label>Mitigating Actions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <description>How likely is this item from occurring?
Low = Not very likely to occur
Medium = Even chance to occur
High = Sure to occur</description>
        <inlineHelpText>How likely is this item from occurring?
Low = Not very likely to occur
Medium = Even chance to occur
High = Sure to occur</inlineHelpText>
        <label>Probability</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
                <color>#A53711</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>MICO_Project__c</referenceTo>
        <relationshipName>MICO_Risks_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>The state of a risk or issue, according to the originator</description>
        <inlineHelpText>Overall State (Open / Closed) of this risk or issue</inlineHelpText>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <color>#FF0000</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
                <color>#78C953</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>What is the status of this risk or issue?</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <color>#AFCADF</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>No Issue</fullName>
                <color>#A845DC</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <description>The sub type of this risk / issue</description>
        <inlineHelpText>The sub type of this risk / issue</inlineHelpText>
        <label>Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organisational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Is this a Risk or an issue?
- Risk: an event that has the probability of occurring and an impact to the project quality, scope, time, cost and/or schedule.
- Issue: has occurred and has a negative impact that must be dealt with (recovery).</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>MICO_User_Story__c</referenceTo>
        <relationshipName>MICO_Risks_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weighting__c</fullName>
        <formula>CASE( Impact_CC__c , &quot;Critical&quot;, 3, &quot;High Impact&quot;, 2,&quot;Low Impact&quot;,1, 0)*
CASE(  Probability__c  , &quot;High&quot;, 3, &quot;Medium&quot;, 2,&quot;Low&quot;,1, 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>An indicator as to the importance of this risk or issue. Calculated as an impact score multiplied by a probability score.</inlineHelpText>
        <label>Weighting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Risk &amp; Issue</label>
    <listViews>
        <fullName>All_Closed_Risks_Issues</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>State__c</columns>
        <columns>Status__c</columns>
        <columns>Probability__c</columns>
        <columns>Impact_CC__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Date_Raised__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>2) All Closed Risks &amp; Issues</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Risks_Issues</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>State__c</columns>
        <columns>Status__c</columns>
        <columns>Probability__c</columns>
        <columns>Impact_CC__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Date_Raised__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>1) All Open Risks &amp; Issues</label>
    </listViews>
    <listViews>
        <fullName>My_Closed_Risks_Issues</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>State__c</columns>
        <columns>Status__c</columns>
        <columns>Probability__c</columns>
        <columns>Impact_CC__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Date_Raised__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>5) My Closed Risks &amp; Issues</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Risks_Issues</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>State__c</columns>
        <columns>Status__c</columns>
        <columns>Probability__c</columns>
        <columns>Impact_CC__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Date_Raised__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>4) My Open Risks &amp; Issues</label>
    </listViews>
    <listViews>
        <fullName>My_Risks_Issues</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>State__c</columns>
        <columns>Status__c</columns>
        <columns>Probability__c</columns>
        <columns>Impact_CC__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Date_Raised__c</columns>
        <filterScope>Mine</filterScope>
        <label>3) My Risks &amp; Issues</label>
    </listViews>
    <nameField>
        <displayFormat>RI-{0000}</displayFormat>
        <label>Risk/Issue ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risks &amp; Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>No_future_dates</fullName>
        <active>true</active>
        <description>Prevents date raised being later than today</description>
        <errorConditionFormula>Date_Raised__c &gt;TODAY()</errorConditionFormula>
        <errorDisplayField>Date_Raised__c</errorDisplayField>
        <errorMessage>&quot;Date Raised&quot; cannot be in the future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Risk_requires_probability</fullName>
        <active>true</active>
        <description>If Type is Risk - then Probability is required</description>
        <errorConditionFormula>AND( ISPICKVAL( Type__c , &quot;Risk&quot;), ISBLANK( TEXT(Probability__c )) )</errorConditionFormula>
        <errorDisplayField>Probability__c</errorDisplayField>
        <errorMessage>Risks must have a probability value</errorMessage>
    </validationRules>
</CustomObject>